# traildb-rs

./: .gitignore  Cargo.toml  Makefile  build.rs  readme.md  rustfmt.toml
examples/: wiki.rs  wiki_pretty.rs
src/: lib.rs
src/ffi/: gen.h
src/ffi/include/: traildb.h
