[package]
authors = ["Jay Kickliter <jay@kickliter.com>"]
build = "build.rs"
name = "traildb"
version = "0.1.0"

[build-dependencies]
bindgen = "^0.19.0"

[dependencies]
clang-sys = "0.11.0"
libc = "^0.2.0"

[dev-dependencies]
prettytable-rs = "0.6.2"

[dev-dependencies.uuid]
features = ["v4"]
version = "0.2.2"
