[package]
authors = ["Jay Kickliter <jay@kickliter.com>", "Kenan Sulayman <kenan@sly.mn>"]
build = "build.rs"
name = "traildb"
version = "0.2.0"

description = "Binding for TrailDB, an efficient tool for storing and querying series of events."
license = "MIT"

documentation = "https://docs.rs/traildb/0.2.0/traildb/"
repository = "https://github.com/KenanSulayman/gdax-client.git"

[build-dependencies]
bindgen = "^0.20.2"

[dependencies]
clang-sys = "0.12.0"
libc = "0.2.20"
prettytable-rs = "0.6.6"

[dev-dependencies]
prettytable-rs = "0.6.2"

[dev-dependencies.uuid]
features = ["v4"]
version = "0.3.1"
